2019-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.packageversion.R: New test
	* inst/unitTests/cpp/rcppversion.cpp: Cpp portion of test 

2019-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/: Add files CONTRIBUTING.md, FUNDING.yml, ISSUE_TEMPLATE.md
	and PULL_REQUEST_TEMPLATE.md

	* inst/include/Rcpp/config.h: Correct RCPP_VERSION and
	RCPP_DEV_VERSION to 1.0.3

2019-11-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2019-11-09  TJ McKinley  <t.mckinley@exeter.ac.uk>

	* R/Attributes.R: Correct how cppFunction() deals with multiple
	depends arguments
	
2019-11-08  Romain Francois  <romain@rstudio.com>

	* inst/include/Rcpp/lang.h: Safer Rcpp_list* and Rcpp_lang*
	* inst/include/Rcpp/Function.h: Add Function.invoke() for operator()
	* inst/include/Rcpp/generated/Function__operator.h: Safer
	Function.operator() using Function.invoke()
	
2019-11-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 1.0.3

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * inst/bib/Rcpp.bib: Idem
        * vignettes/Rcpp.bib: Idem

2019-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	
	* inst/include/Rcpp/XPtr.h: Provided fallback for old constructor
	when C++11 is not available (follow-up to #1003)
	* inst/unitTests/runit.XPTr.R (test.XPtr): On Windows (as a proxy for
	old compilers) do not test new feature

	* tests/doRUnit.R: Protect printing to /tmp from Windows use

	* vignettes/rmd/Rcpp.bib: Updated
	* inst/bib/Rcpp.bib: Idem

2019-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/Rcpp/Reference.h: Shield Rf_mkstring inside Rf_lang2
	* inst/include/Rcpp/Environment.h: Idem (inside Rf_lang4)
	* inst/include/Rcpp/proxy/FieldProxy.h: Idem (inside Rf_lang3 and 4)

2019-10-31  Romain Francois  <romain@rstudio.com>
	