@@ -20,8 +20,6 @@
 
 .runThisTest <- Sys.getenv("RunAllRcppTests") == "yes"
 
-isWindows <- Sys.info()[["sysname"]] == "Windows"
-
 if (.runThisTest) {
 
     .setUp <- Rcpp:::unitTestSetup("XPtr.cpp")
@@ -33,10 +31,8 @@ if (.runThisTest) {
         front <- xptr_2(xp)
         checkEquals( front, 1L, msg = "check usage of external pointer" )
 
-        if (!isWindows) {
-            xptr_self_tag(xp)
-            checkEquals(xptr_has_self_tag(xp), T, msg = "check external pointer tag preserved")
-        }
+        xptr_self_tag(xp)
+        checkEquals(xptr_has_self_tag(xp), T, msg = "check external pointer tag preserved")
 
         checkTrue(xptr_release(xp), msg = "check release of external pointer")
 
