@@ -1,3 +1,8 @@
+2019-11-13  Stephen Wade  <stephematician@gmail.com>
+
+	* inst/include/Rcpp/XPtr.h: Delete delegating constructor (follow-up #1012)
+	* inst/unitTests/runit.XPTr.R (test.XPtr): Reinsert self-tag test on Windows
+
 2019-11-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/unitTests/runit.packageversion.R: New test
